Established default headers for CORS

--- a/Web.config
+++ b/Web.config
@@ -3,6 +3,15 @@
 
   <system.webServer>
 
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
+        <add name="X-XSS-Protection" value="1; mode=block" />
+        <add name="Arr-Disable-Session-Affinity" value="true" />
+      </customHeaders>
+    </httpProtocol>
+
   </system.webServer>
 
 </configuration>
