--- a/Web.config
+++ b/Web.config
@@ -12,6 +12,9 @@
       </customHeaders>
     </httpProtocol>
 
+    <staticContent>
+      <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="730.00:00:00" />
+    </staticContent>
   </system.webServer>
 
 </configuration>
