Established proprietary MIME types

--- a/Web.config
+++ b/Web.config
@@ -46,6 +46,10 @@
       <mimeMap fileExtension=".xlsx" mimeType="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
       <mimeMap fileExtension=".webp" mimeType="image/webp" />
 
+      <!--Proprietary types-->
+      <mimeMap fileExtension=".gsm" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".gsp" mimeType="application/octet-stream" />
+
     </staticContent>
   </system.webServer>
 
