Enabled static and dynamic HTTP compression

--- a/Web.config
+++ b/Web.config
@@ -51,6 +51,9 @@
       <mimeMap fileExtension=".gsp" mimeType="application/octet-stream" />
 
     </staticContent>
+
+    <urlCompression doStaticCompression="true" doDynamicCompression="true" />
+
   </system.webServer>
 
 </configuration>
