--- a/Web.config
+++ b/Web.config
@@ -69,6 +69,17 @@
         <add enabled="true" mimeType="image/svg+xml" />
         <add enabled="false" mimeType="*/*" />
       </dynamicTypes>
+      <staticTypes>
+        <clear />
+        <add enabled="true" mimeType="text/*" />
+        <add enabled="true" mimeType="message/*" />
+        <add enabled="true" mimeType="application/javascript" />
+        <add enabled="true" mimeType="application/atom+xml" />
+        <add enabled="true" mimeType="application/xaml+xml" />
+        <add enabled="true" mimeType="application/json" />
+        <add enabled="true" mimeType="image/svg+xml" />
+        <add enabled="false" mimeType="*/*" />
+      </staticTypes>
     </httpCompression>
 
   </system.webServer>
