Excluded content folders from git
These will be maintained by @rkossik, and will not be committed to the GitHub repository.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Content folders
+[Dd]ocuments/
+[Ii]mages/
+[Vv]ideos/
+
 # User-specific files
 *.rsuser
 *.suo
