--- a/GoldSim-Media.csproj
+++ b/GoldSim-Media.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>GoldSim_Media</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
+  </ItemGroup>
+
 </Project>
