--- a/GoldSim-Media.csproj
+++ b/GoldSim-Media.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>GoldSim_Media</RootNamespace>
+    <UserSecretsId>e156a6d8-3711-422d-947c-81a831f67c63</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
